ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: website.theaditya.co.uk
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: flask-app-service
              port:
                number: 80
